--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
 <link rel="stylesheet" href="main.css">
 </head>
-<body>
+<body ontouchstart="">
   <div id="app"></div>
   <script id="constants" type="text/template">{
         "apiURL": "<!--insert:apiURL-->"
