--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,29 @@
 <!doctype html>
 <html>
 <head>
-<title>Kit</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Example uav app</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <meta charset="UTF-8">
-<link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
+<link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
 <link rel="stylesheet" href="main.css">
 </head>
-<body ontouchstart="">
-  <div id="app"></div>
-  <script id="constants" type="text/template">{
-        "apiURL": "<!--insert:apiURL-->"
+<body ontouchstart="" tabindex="-1">
+    <div id="app"></div>
+    <!--[if lte IE 9]>
+    <script>var a=document.getElementById('app');a.parentNode.removeChild(a);</script>
+    <center>
+      <h3>Sorry, this browser is not supported.</h3>
+      <p>Please <a href="http://outdatedbrowser.com/en" target="_blank">upgrade</a> and try again.</a>
+    </center>
+    <![endif]-->
+    <noscript>
+      <div style="text-align:center;position:fixed;width:100%;">
+        <h3>Looks like you have JavaScript disabled.</h3>
+        <p>Please <a href="http://www.enable-javascript.com" target="_blank">enable JavaScript</a> and try again.</a>
+      </div>
+    </noscript>
+    <script id="constants" type="text/template">{
+        "apiURL": "<!--insert:API_URL-->"
     }</script>
   <script src="bundle.js"></script>
 </body>
