--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
 <link rel="stylesheet" href="main.css">
 </head>
-<body ontouchstart="" tabindex="-1">
+<body>
     <div id="app"></div>
     <!--[if lte IE 9]>
     <script>var a=document.getElementById('app');a.parentNode.removeChild(a);</script>
